<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- MainActivity -->

    <item
        android:id="@+id/action_settings"
        android:actionLayout="@layout/menu_item"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unblock_users"
        android:orderInCategory="100"
        android:title="@string/menu_unblock_users"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unhide_chats"
        android:orderInCategory="100"
        android:title="@string/menu_unhide_chats"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/menu_favorites"
        app:showAsAction="never" />

    <!-- Fragments: Users | Chatlist | Groups | Favorites -->

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_rounded_24"
        android:title="@string/Buscar"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <!-- ChatGroupFragment -->

    <item
        android:id="@+id/action_exit_group"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="always" />

    <!-- ChatActivity | ProfileActivity-->

    <item
        android:id="@+id/action_notifications_on"
        android:orderInCategory="100"
        android:title="@string/menu_user_notifications_on"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notifications_off"
        android:orderInCategory="100"
        android:title="@string/menu_user_notifications_off"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_block"
        android:orderInCategory="100"
        android:title="@string/menu_user_block"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unblock"
        android:orderInCategory="100"
        android:title="@string/menu_user_unblock"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_chat"
        android:orderInCategory="100"
        android:title="@string/menu_delete_chat"
        app:showAsAction="never" />

</menu>
