<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_notifications_off"
        android:orderInCategory="100"
        android:title="@string/menu_user_notifications_off"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_notifications_on"
        android:orderInCategory="100"
        android:title="@string/menu_user_notifications_on"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bloq"
        android:orderInCategory="100"
        android:title="@string/menu_user_block"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_desbloq"
        android:orderInCategory="100"
        android:title="@string/menu_user_unblock"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_chat"
        android:orderInCategory="100"
        android:title="@string/menu_delete_chat"
        app:showAsAction="never" />
</menu>