<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navBottomUsers"
        android:icon="@drawable/ic_users_rounded_24"
        android:title="@string/menu_users"
        android:titleCondensed="@string/menu_users"
        app:contentDescription="@string/menu_users" />

    <item
        android:id="@+id/navBottomChat"
        android:icon="@drawable/ic_chat_rounded_24"
        android:title="@string/menu_chat"
        android:titleCondensed="@string/menu_chat"
        app:contentDescription="@string/menu_chat" />

    <item
        android:id="@+id/navBottomGroups"
        android:icon="@drawable/ic_groups_rounded_24"
        android:title="@string/menu_groups"
        android:titleCondensed="@string/menu_groups"
        app:contentDescription="@string/menu_groups" />

    <item
        android:id="@+id/navBottomFavorites"
        android:icon="@drawable/ic_star_rounded_24"
        android:title="@string/menu_favorites"
        android:titleCondensed="@string/menu_favorites"
        android:visible="true"
        app:contentDescription="@string/menu_favorites" />
</menu>
