<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/action_index"
        android:contentDescription="@string/inicio"
        android:icon="@drawable/ic_home_rounded_24"
        android:title="@string/inicio"
        android:titleCondensed="@string/inicio" />

    <item
        android:id="@+id/action_edit_profile"
        android:contentDescription="@string/menu_edit_profile"
        android:icon="@drawable/ic_users_rounded_24"
        android:title="@string/menu_edit_profile"
        android:titleCondensed="@string/menu_edit_profile" />

    <item
        android:id="@+id/action_settings"
        android:contentDescription="@string/menu_settings"
        android:icon="@drawable/ic_settings_rounded_24"
        android:title="@string/menu_settings"
        android:titleCondensed="@string/menu_settings" />

    <item
        android:id="@+id/action_logout"
        android:contentDescription="@string/logout"
        android:icon="@drawable/ic_logout_rounded_24"
        android:title="@string/logout"
        android:titleCondensed="@string/logout" />
</menu>
